# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: __init__.py
lib/aws/: cognito.py  dynamodb.py  s3.py
projects/example/: .env.example  .gitignore  main.py
projects/example/demo/: __init__.py
shared/config/: __init__.py
shared/logging/: __init__.py
shared/utils/: __init__.py  date.py  sanitize.py  timestamp.py
